test/files/neg/t9960.check
t9960.scala:27: error: implicit error;
!I m:
  NNN.Aux[
    Reader
    ,
    FxAppend[Fx1[Task], Fx2[Validate, Reader]]
    ,
    Fx2[Task, Validate]
  ]
      val hhhh: Eff[Fx2[Task, Validate], Unit] = runReader(gggg)
                                                          ^
1 error
